@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.springframework.boot.actuate.autoconfigure.endpoint.web.documentatio
 
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -48,6 +47,9 @@ import org.springframework.restdocs.payload.ResponseFieldsSnippet;
 import org.springframework.test.web.reactive.server.WebTestClient;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.servlet.function.RouterFunction;
+import org.springframework.web.servlet.function.RouterFunctions;
+import org.springframework.web.servlet.function.ServerResponse;
 
 import static org.springframework.restdocs.payload.PayloadDocumentation.beneathPath;
 import static org.springframework.restdocs.payload.PayloadDocumentation.fieldWithPath;
@@ -55,11 +57,13 @@ import static org.springframework.restdocs.payload.PayloadDocumentation.response
 import static org.springframework.restdocs.payload.PayloadDocumentation.subsectionWithPath;
 import static org.springframework.restdocs.webtestclient.WebTestClientRestDocumentation.document;
 import static org.springframework.restdocs.webtestclient.WebTestClientRestDocumentation.documentationConfiguration;
+import static org.springframework.web.servlet.function.RequestPredicates.GET;
 
 /**
  * Tests for generating documentation describing {@link MappingsEndpoint}.
  *
  * @author Andy Wilkinson
+ * @author Xiong Tang
  */
 @ExtendWith(RestDocumentationExtension.class)
 @SpringBootTest(webEnvironment = WebEnvironment.RANDOM_PORT)
@@ -72,8 +76,11 @@ class MappingsEndpointServletDocumentationTests extends AbstractEndpointDocument
 
 	@BeforeEach
 	void webTestClient(RestDocumentationContextProvider restDocumentation) {
-		this.client = WebTestClient.bindToServer().filter(documentationConfiguration(restDocumentation))
-				.baseUrl("http://localhost:" + this.port).responseTimeout(Duration.ofMinutes(5)).build();
+		this.client = WebTestClient.bindToServer()
+			.filter(documentationConfiguration(restDocumentation))
+			.baseUrl("http://localhost:" + this.port)
+			.responseTimeout(Duration.ofMinutes(5))
+			.build();
 	}
 
 	@Test
@@ -82,21 +89,24 @@ class MappingsEndpointServletDocumentationTests extends AbstractEndpointDocument
 				fieldWithPath("contexts").description("Application contexts keyed by id."),
 				fieldWithPath("contexts.*.mappings").description("Mappings in the context, keyed by mapping type."),
 				subsectionWithPath("contexts.*.mappings.dispatcherServlets")
-						.description("Dispatcher servlet mappings, if any."),
+					.description("Dispatcher servlet mappings, if any."),
 				subsectionWithPath("contexts.*.mappings.servletFilters")
-						.description("Servlet filter mappings, if any."),
+					.description("Servlet filter mappings, if any."),
 				subsectionWithPath("contexts.*.mappings.servlets").description("Servlet mappings, if any."),
 				subsectionWithPath("contexts.*.mappings.dispatcherHandlers")
-						.description("Dispatcher handler mappings, if any.").optional().type(JsonFieldType.OBJECT),
+					.description("Dispatcher handler mappings, if any.")
+					.optional()
+					.type(JsonFieldType.OBJECT),
 				parentIdField());
-		List<FieldDescriptor> dispatcherServletFields = new ArrayList<>(Arrays.asList(
+		List<FieldDescriptor> dispatcherServletFields = new ArrayList<>(List.of(
 				fieldWithPath("*")
-						.description("Dispatcher servlet mappings, if any, keyed by dispatcher servlet bean name."),
-				fieldWithPath("*.[].details").optional().type(JsonFieldType.OBJECT)
-						.description("Additional implementation-specific details about the mapping. Optional."),
+					.description("Dispatcher servlet mappings, if any, keyed by dispatcher servlet bean name."),
+				fieldWithPath("*.[].details").optional()
+					.type(JsonFieldType.OBJECT)
+					.description("Additional implementation-specific details about the mapping. Optional."),
 				fieldWithPath("*.[].handler").description("Handler for the mapping."),
 				fieldWithPath("*.[].predicate").description("Predicate for the mapping.")));
-		List<FieldDescriptor> requestMappingConditions = Arrays.asList(
+		List<FieldDescriptor> requestMappingConditions = List.of(
 				requestMappingConditionField("").description("Details of the request mapping conditions.").optional(),
 				requestMappingConditionField(".consumes").description("Details of the consumes condition"),
 				requestMappingConditionField(".consumes.[].mediaType").description("Consumed media type."),
@@ -109,39 +119,50 @@ class MappingsEndpointServletDocumentationTests extends AbstractEndpointDocument
 				requestMappingConditionField(".params").description("Details of the params condition."),
 				requestMappingConditionField(".params.[].name").description("Name of the parameter."),
 				requestMappingConditionField(".params.[].value")
-						.description("Required value of the parameter, if any."),
+					.description("Required value of the parameter, if any."),
 				requestMappingConditionField(".params.[].negated").description("Whether the value is negated."),
 				requestMappingConditionField(".patterns")
-						.description("Patterns identifying the paths handled by the mapping."),
+					.description("Patterns identifying the paths handled by the mapping."),
 				requestMappingConditionField(".produces").description("Details of the produces condition."),
 				requestMappingConditionField(".produces.[].mediaType").description("Produced media type."),
 				requestMappingConditionField(".produces.[].negated").description("Whether the media type is negated."));
-		List<FieldDescriptor> handlerMethod = Arrays.asList(
-				fieldWithPath("*.[].details.handlerMethod").optional().type(JsonFieldType.OBJECT)
-						.description("Details of the method, if any, that will handle requests to this mapping."),
+		List<FieldDescriptor> handlerMethod = List.of(
+				fieldWithPath("*.[].details.handlerMethod").optional()
+					.type(JsonFieldType.OBJECT)
+					.description("Details of the method, if any, that will handle requests to this mapping."),
 				fieldWithPath("*.[].details.handlerMethod.className")
-						.description("Fully qualified name of the class of the method."),
+					.description("Fully qualified name of the class of the method."),
 				fieldWithPath("*.[].details.handlerMethod.name").description("Name of the method."),
 				fieldWithPath("*.[].details.handlerMethod.descriptor")
-						.description("Descriptor of the method as specified in the Java Language Specification."));
+					.description("Descriptor of the method as specified in the Java Language Specification."));
+		List<FieldDescriptor> handlerFunction = List.of(
+				fieldWithPath("*.[].details.handlerFunction").optional()
+					.type(JsonFieldType.OBJECT)
+					.description("Details of the function, if any, that will handle requests to this mapping."),
+				fieldWithPath("*.[].details.handlerFunction.className").type(JsonFieldType.STRING)
+					.description("Fully qualified name of the class of the function."));
+		dispatcherServletFields.addAll(handlerFunction);
 		dispatcherServletFields.addAll(handlerMethod);
 		dispatcherServletFields.addAll(requestMappingConditions);
-		this.client.get().uri("/actuator/mappings").exchange().expectBody()
-				.consumeWith(document("mappings", commonResponseFields,
-						responseFields(beneathPath("contexts.*.mappings.dispatcherServlets")
-								.withSubsectionId("dispatcher-servlets"), dispatcherServletFields),
-						responseFields(
-								beneathPath("contexts.*.mappings.servletFilters").withSubsectionId("servlet-filters"),
-								fieldWithPath("[].servletNameMappings")
-										.description("Names of the servlets to which the filter is mapped."),
-								fieldWithPath("[].urlPatternMappings")
-										.description("URL pattern to which the filter is mapped."),
-								fieldWithPath("[].name").description("Name of the filter."),
-								fieldWithPath("[].className").description("Class name of the filter")),
-						responseFields(beneathPath("contexts.*.mappings.servlets").withSubsectionId("servlets"),
-								fieldWithPath("[].mappings").description("Mappings of the servlet."),
-								fieldWithPath("[].name").description("Name of the servlet."),
-								fieldWithPath("[].className").description("Class name of the servlet"))));
+		this.client.get()
+			.uri("/actuator/mappings")
+			.exchange()
+			.expectBody()
+			.consumeWith(document("mappings", commonResponseFields,
+					responseFields(beneathPath("contexts.*.mappings.dispatcherServlets")
+						.withSubsectionId("dispatcher-servlets"), dispatcherServletFields),
+					responseFields(
+							beneathPath("contexts.*.mappings.servletFilters").withSubsectionId("servlet-filters"),
+							fieldWithPath("[].servletNameMappings")
+								.description("Names of the servlets to which the filter is mapped."),
+							fieldWithPath("[].urlPatternMappings")
+								.description("URL pattern to which the filter is mapped."),
+							fieldWithPath("[].name").description("Name of the filter."),
+							fieldWithPath("[].className").description("Class name of the filter")),
+					responseFields(beneathPath("contexts.*.mappings.servlets").withSubsectionId("servlets"),
+							fieldWithPath("[].mappings").description("Mappings of the servlet."),
+							fieldWithPath("[].name").description("Name of the servlet."),
+							fieldWithPath("[].className").description("Class name of the servlet"))));
 	}
 
 	private FieldDescriptor requestMappingConditionField(String path) {
@@ -181,6 +202,11 @@ class MappingsEndpointServletDocumentationTests extends AbstractEndpointDocument
 		@Bean
 		ExampleController exampleController() {
 			return new ExampleController();
+		}
+
+		@Bean
+		RouterFunction<ServerResponse> exampleRouter() {
+			return RouterFunctions.route(GET("/foo"), (request) -> ServerResponse.ok().build());
 		}
 
 	}
